# windows-gaming

./: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  Makefile  README.md  config-sample.toml  update-proto.bat  windows.service
autosetup/: .gitignore  autounattend.xml  install.bat
clientpipe-proto/: Cargo.toml  build.rs
clientpipe-proto/src/: lib.rs  protocol.proto
common/src/: config.rs
common/src/hotkeys/: keys.rs  mod.rs
driver/: Cargo.toml
driver/src/: lib.rs  qemu.rs  release_all_keys.rs  samba.rs  sleep_inhibitor.rs
driver/src/control/: mod.rs
guest-agent/: .gitignore  Cargo.toml  install.bat  uninstall.bat  update-proto.bat
guest-agent/VfioService/: VfioService.sln
guest-agent/VfioService/Loader/: Loader.csproj  Program.cs
guest-agent/VfioService/VfioService/: ClientManager.cs  ClipboardManager.cs  Command.cs  InterceptMouse.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MainForm_Clipboard.cs  MouseHook.cs  Program.cs  Protocol.cs  StuckKeyFix.cs  VfioService.csproj
guest-agent/VfioService/VfioService/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
guest-agent/clientpipe-proto/: build.rs
guest-agent/clientpipe-proto/src/: lib.rs  protocol.proto
guest-agent/src/: clientpipe_codec.rs  main.rs
misc/: 80-vfio.rules  logind.conf  windows-gaming.sh  windows.service
qmpgen/: Cargo.toml  build.rs
qmpgen/src/: main.rs  parser.rs  qapi.rustpeg  types.rs  writer.rs
setup/: Cargo.toml
setup/src/: vfio.rs
src/: main.rs  protocol.proto
tokio-clipboard/: Cargo.toml
tokio-clipboard/src/wayland/: cancel.rs
tokio-clipboard/src/windows/: clipboard_thread.rs  format.rs
vfio-ubind/: Cargo.toml
vfio-ubind/src/: main.rs
wayland-clipboard-async/: Cargo.toml
wayland-clipboard-async/src/: cancel.rs  clipboard_internal.rs  clipboard_nice.rs  eventloop.rs  lib.rs
windows-clipboard-async/: Cargo.toml
windows-clipboard-async/examples/: run.rs
windows-clipboard-async/src/: clipboard_thread.rs  format.rs  lib.rs  offer.rs  raw.rs  send.rs
windows-edge-grab/: Cargo.toml
windows-edge-grab/src/: config.rs  main.rs
windows-eventloop/: Cargo.toml
windows-eventloop/src/: lib.rs
windows-gaming/: Cargo.toml
windows-gaming-driver/: .gitignore  Cargo.toml
windows-gaming-driver/src/: clientpipe_codec.rs  config.rs  control_codec.rs  controller.rs  hwid.rs  logger.rs  main.rs  mainloop.rs  monitor_codec.rs  my_io.rs  pci_device.rs  qemu.rs  samba.rs  sd_notify.rs  setup_wizard.rs  signalfd.rs  usb_device.rs  util.rs
windows-gaming-driver/src/driver/: clipboard.rs  controller.rs  dbus.rs  libinput.rs  mod.rs  qemu.rs  samba.rs  sd_notify.rs  signalfd.rs  sleep_inhibitor.rs
windows-gaming-driver/src/driver/clientpipe/: codec.rs  mod.rs
windows-gaming-driver/src/driver/control/: codec.rs  mod.rs
windows-gaming-driver/src/driver/hotkeys/: keys.rs  linux.rs  mod.rs  qcode.rs
windows-gaming-driver/src/driver/monitor/: codec.rs  mod.rs
windows-gaming-driver/src/mainloop/: catch_sigterm.rs  clientpipe_handler.rs  control_handler.rs  mod.rs  monitor_handler.rs  monitor_manager.rs  pinger.rs
windows-gaming-driver/src/setup/: ask.rs  gpu.rs  initramfs.rs  iommu.rs  mod.rs  usb.rs  vfio.rs  vm.rs  wizard.rs
windows-gaming/common/: Cargo.toml
windows-gaming/common/src/: config.rs  hwid.rs  lib.rs  usb_device.rs
windows-gaming/common/src/hotkeys/: linux.rs
windows-gaming/config/: Cargo.toml
windows-gaming/config/src/: initramfs.rs  iommu.rs  lib.rs  usb.rs  vfio.rs  vm.rs
windows-gaming/driver/: Cargo.toml
windows-gaming/driver/clientpipe-proto/src/: lib.rs
windows-gaming/driver/src/: clipboard.rs  controller.rs  dbus.rs  lib.rs  libinput.rs  qemu.rs  release_all_keys.rs  samba.rs  sd_notify.rs  sleep_inhibitor.rs
windows-gaming/driver/src/clientpipe/: codec.rs  mod.rs
windows-gaming/driver/src/control/: codec.rs  mod.rs
windows-gaming/driver/src/monitor/: codec.rs  mod.rs
windows-gaming/setup/src/: vm.rs
windows-gaming/src/: main.rs
windows-gaming/wizard/: Cargo.toml
windows-gaming/wizard/src/: iommu.rs  lib.rs  usb.rs
windows-keybinds/: Cargo.toml
windows-keybinds/examples/: run.rs
windows-keybinds/src/: lib.rs
wizard/src/: initramfs.rs  wizard.rs
x11-edge-grab/: Cargo.toml
x11-edge-grab/src/: config.rs  main.rs
zerocost-clipboard/: Cargo.toml
zerocost-clipboard/examples/: windows.rs
zerocost-clipboard/src/: lib.rs
zerocost-clipboard/src/wayland/: clipboard_internal.rs  clipboard_nice.rs  eventloop.rs  mod.rs
zerocost-clipboard/src/windows/: format.rs  mod.rs  offer.rs  raw.rs  send.rs
