[package]
name = "clientpipe-proto"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
prost = { git = "https://github.com/danburkert/prost.git", rev = "f73e0198f76d9ed438277e1072edec6962c21a09" }
prost-derive = { git = "https://github.com/danburkert/prost.git", rev = "f73e0198f76d9ed438277e1072edec6962c21a09" }
prost-types = { git = "https://github.com/danburkert/prost.git", rev = "f73e0198f76d9ed438277e1072edec6962c21a09" }
bytes = "0.4"

[build-dependencies]
prost-build = { git = "https://github.com/danburkert/prost.git", rev = "f73e0198f76d9ed438277e1072edec6962c21a09" }
