[package]
name = "clientpipe-proto"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
prost = { git = "https://github.com/danburkert/prost.git" }
prost-derive = { git = "https://github.com/danburkert/prost.git" }
prost-types = { git = "https://github.com/danburkert/prost.git" }
bytes = "0.4"

[build-dependencies]
prost-build = { git = "https://github.com/danburkert/prost.git" }
