[package]
name = "guest-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
bytes = "1.1.0"
clientpipe-proto = { path = "clientpipe-proto" }
futures-util = { version = "0.3.17", features = ["std", "sink"], default-features = false }
prost = "0.9.0"
tokio = { version = "1.13.0", features = ["rt", "net", "macros", "sync"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.6.9", features = ["codec"] }
windows = { version = "0.26.0", features = ["Win32_Foundation", "Win32_System_Shutdown", "Win32_System_Threading", "Win32_Security", "Win32_System_Power", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console"] }
zerocost-clipboard = { path = "../zerocost-clipboard", features = ["image"] }
windows-keybinds = { path = "../windows-keybinds" }
windows-eventloop = { path = "../windows-eventloop" }
env_logger = "0.9.0"
log = "0.4.14"
image = { version = "0.23.14", features = ["png"], default-features = false }


[features]
