[package]
name = "wayland-clipboard-async"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.29.1"
wayland-protocols = { version = "0.29.1", features = ["client", "unstable_protocols"] }
tokio = { version = "1.13.0", features = ["rt", "net", "io-util", "sync", "macros"] }
tokio-pipe = "0.2.1"
anyhow = "1.0.44"
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-util = "0.6.9"
