[package]
name = "windows-clipboard-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"] }
image = { version = "0.23.14", optional = true, features = ["bmp"], default-features = false }
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["rt", "sync"] }
windows = { version = "0.25.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemServices", "Win32_System_DataExchange", "Win32_System_Memory"] }

[dev-dependencies]
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "run"
required-features = ["image"]

[package.metadata.docs.rs]
all-features = true
