[package]
name = "windows-gaming-driver"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
libc = "0.2"
lazy_static = "0.2"
nix = { version = "0.7.0", features = ["signalfd"] }
users = "0.5.2"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
libudev = "0.2.0"
num_cpus = "1.2.0"
xdg = "^2.1"
itertools = "0.6"
log = "0.3.8"
env_logger = "0.4.3"
time = "0.1.37"
mio = "0.6"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-uds = "0.1"
tokio-timer = "0.1"
dbus = "0.5"
