[package]
name = "zerocost-clipboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.13.0", features = ["rt", "sync"] }
thiserror = "1.0.30"
cfg-if = "1.0.0"
async-trait = "0.1.51"

[dev-dependencies]
env_logger = "0.9.0"


[target.'cfg(unix)'.dependencies]
# wayland deps go here:
wayland-client = { version = "0.29.1", optional = true }
wayland-protocols = { version = "0.29.1", features = ["client", "unstable_protocols"], optional = true }
tokio-pipe = { version = "0.2.1", optional = true }
anyhow = "1.0.44"
#tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-util = { version = "0.6.9", optional = true }

[target.'cfg(windows)'.dependencies]
# windows deps go here:
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"], optional = true }
image = { version = "0.23.14", optional = true, features = ["bmp"], default-features = false }
windows = { version = "0.26.0", features = ["std", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemServices", "Win32_System_DataExchange", "Win32_System_Memory"], optional = true }
windows-eventloop = { path = "../windows-eventloop" }
[target.'cfg(windows)'.dev-dependencies]
tokio = { version = "1.13.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }


[features]
default = ["wayland", "win-clipboard"]
wayland = ["wayland-client", "wayland-protocols", "tokio-pipe", "tokio-util", "tokio/net", "tokio/io-util", "tokio/macros"]
win-clipboard = ["windows", "futures-util"]
# there is an optional "image" feature on windows
