[package]
name = "driver"
version = "0.2.0"
authors = ["main() <main@ehvag.de>"]
edition = "2021"

[dependencies]
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
libudev = "0.2.0"
itertools = "0.6"
log = "0.4.14"
mio = "0.6"
bytes = "1.1"
futures = "0.1"
futures03 = { package = "futures", version = "0.3", features = ["compat", "io-compat"] }
tokio = { version = "1.14", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec", "compat"] }
dbus = "0.5"
input = "0.7.0"
prost = "0.9"
clientpipe-proto = { path = "../../guest-agent/clientpipe-proto" }
common = { path = "../common" }
sd-notify = "0.3.0"
zerocost-clipboard = { path = "../../zerocost-clipboard" }
anyhow = "1.0.45"
tokio-stream = { version = "0.1.8", features = ["sync", "signal", "time", "net"] }
tokio-io = "0.1.13"
qapi = { version = "0.8", features = ["qmp", "async-tokio-all"] }
